# bodega

./: .gitignore  .project  Makefile  README.md  SFX_UPDATES_DOC.txt  out
dev_tool/: DevLoop.cpp  DevLoop.h  DevTool.cpp  DevTool.h  ItemBar.h  Makefile  Makefile_kiss  README.txt  ResourceBar.h  SceneWindow.cpp  definitions.h
dev_tool/kiss/: kiss_draw.c  kiss_widgets.c
dev_tool/resources/miscellaneous/: doge_coin.txt
dev_tool/resources/scenes/: test.txt  test2.txt
dev_tool/tool/: DevLoop.cpp  DevLoop.h  DevTool.cpp  DevTool.h  FileBrowser.cpp  FileBrowser.h  ItemBar.cpp  ItemBar.h  ResourceBar.cpp  ResourceBar.h  SceneWindow.cpp  SceneWindow.h  definitions.h
resources/PlayerSprites/: Damaged.xml  Dead.xml  Death.xml  IdleWarrior.xml  RunDown.xml  RunSide.xml  RunUp.xml  SwordDown.xml  SwordSide.xml  SwordUp.xml  fireDown.xml  fireLeft.xml  fireRight.xml  fireUp.xml  idle.xml  jumpSheet.xml  walkDown.xml  walkRight.xml  walkUp.xml
resources/Projectiles/: Bblue.xml  Bpink.xml  redB.xml
resources/art/spritesheets/: portal.xml  portal_backup.xml
resources/character/: deadSheet.xml  idleSheet.xml  runSheet.xml
resources/playerAssets/: idle.xml
resources/scenes/: README.md  test.txt  test2.txt  test3.txt  testSave0.txt  testSave1.txt  testSave2.txt  testSave3.txt
resources/scenes/forest/: BossBLC.txt  BossBRC  BossTLC.txt  BossTRC.txt  (+8 more)
src/: DevTool.h
src/dev-tool/: CMakeLists.txt  DevTool.cpp  DevTool.h  LICENSE.txt  Makefile  README.md  ResourceBar.cpp  ResourceBar.h  example1.cpp
src/dev-tool/engine/: DevTool.h  DisplayObject.cpp  Game.cpp  Game.h
src/dev-tool/glad/src/: glad.c
src/dev-tool/imgui/: imgui_impl_opengl3.cpp
src/dev-tool/sdlgui/: AffineTransform.cpp  AnimatedSprite.h  DisplayObject.cpp  DisplayObject.h  DisplayObjectContainer.cpp  DisplayObjectContainer.h  Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventListener.h  Game.cpp  ResourceBar.cpp
src/dev_tool/: AnimatedSprite.cpp  Camera.cpp  Camera.h  DemoSprite.cpp  DevTool.cpp  DevTool.h  DisplayObject.cpp  DisplayObject.h  DisplayObjectContainer.cpp  DisplayObjectContainer.h  Game.cpp  Game.h  ItemBar.cpp  ItemBar.h  Makefile  Mouse.cpp  README.txt  ResourceBar.cpp  ResourceBar.h  Scene.cpp  Scene.h  SceneWindow.cpp  SceneWindow.h  kiss_example1.c
src/engine/: .CollisionSystem.cpp.swp  .Urchin.cpp.swp  AffineTransform.cpp  AnimatedSprite.cpp  AnimatedSprite.h  Animations.cpp  Animations.h  Camera.cpp  Camera.h  Cerb.cpp  Cerb.h  CollisionSystem.cpp  CollisionSystem.h  DemoDungeon.cpp  DemoDungeon.h  DemoSprite.cpp  DemoSprite.h  DisplayObject.cpp  DisplayObject.h  DisplayObjectContainer.cpp  DisplayObjectContainer.h  Door.cpp  Door.h  Dungeon.cpp  Dungeon.h  DungeonManager.h  Emitter.cpp  Emitter.h  Enemy.cpp  Enemy.h  ForestDungeon.cpp  ForestDungeon.h  Game.cpp  Game.h  HadesDungeon.cpp  HadesDungeon.h  ItemSystem.cpp  ItemSystem.h  Jelly.cpp  Jelly.h  (+50 more)
src/kiss_sdl/: DemoSprite.cpp  DemoSprite.h  DevTool.cpp  DevTool.h  DisplayObject.cpp  DisplayObject.h  DisplayObjectContainer.cpp  Game.cpp  Game.h  ItemBar.cpp  ItemBar.h  README.md  ResourceBar.h  SceneWindow.cpp  SceneWindow.h  kiss_example1.c
src/main/: MyGame.cpp  MyGame.h  main.cpp
src/new-dev-tool/: CMakeLists.txt  Makefile
(+55 files in other folders)
